manifests/test/immich/immich_gateway.networking.k8s.io_v1_gateway_immich.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  name: immich
  namespace: immich
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.60
  listeners:
  - hostname: immich.10.5.0.60.nip.io
    name: immich
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: immich-gateway-tls
      mode: Terminate
