manifests/test/immich/immich_gateway.networking.k8s.io_v1_httproute_immich.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  hostnames:
  - immich.10.5.0.60.nip.io
  parentRefs:
  - name: immich
  rules:
  - backendRefs:
    - name: immich-server
      port: 80
