manifests/test/immich/immich_networking.k8s.io_v1_networkpolicy_immich-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: redis
  name: immich-redis
  namespace: immich
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 6379
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  - Egress
